--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "typescript": "^4.3.5"
   },
   "scripts": {
-    "postinstall": "npm run copy-libs",
+    "postinstall": "npm run copy-libs && ngcc --tsconfig tsconfig.json",
     "update-deps": "npm update",
     "postupdate-deps": "npm run copy-libs",
     "copy-libs": "cpx \"node_modules/{angular,angular-*,bootstrap/dist,jquery/dist,zone.js/bundles}/**/*\" app/lib -C",
