--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "update-deps": "npm update",
     "postupdate-deps": "npm run copy-libs",
     "copy-libs": "cpx \"node_modules/{angular,angular-*,bootstrap/dist,jquery/dist,zone.js/bundles}/**/*\" app/lib -C",
-    "prestart": "npm install",
+    "prestart": "npm install && npm run build",
     "start": "http-server ./app -a localhost -p 8000 -c-1",
     "pretest": "npm install",
     "test": "karma start karma.conf.js",
@@ -47,6 +47,7 @@
     "preupdate-webdriver": "npm install",
     "update-webdriver": "webdriver-manager update",
     "preprotractor": "npm run update-webdriver",
-    "protractor": "protractor e2e-tests/protractor.conf.js"
+    "protractor": "protractor e2e-tests/protractor.conf.js",
+    "build": "ngc --project tsconfig.app.json && esbuild out-tsc/app/app.js --bundle --outfile=app/app.js"
   }
 }
