--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "repository": "https://github.com/angular/angular-phonecat",
   "license": "MIT",
   "dependencies": {
+    "@angular/core": "^12.2.7",
+    "@angular/platform-browser": "^12.2.7",
+    "@angular/upgrade": "^12.2.7",
     "angular": "1.8.x",
     "angular-animate": "1.8.x",
     "angular-resource": "1.8.x",
     "angular-route": "1.8.x",
     "bootstrap": "3.3.x",
-    "jquery": "3.3.x"
+    "jquery": "3.3.x",
+    "rxjs": "^7.3.0",
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
     "angular-mocks": "1.8.x",
