--- a/package.json
+++ b/package.json
@@ -19,15 +19,20 @@
     "zone.js": "^0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/schematics": "^12.2.7",
+    "@angular/compiler-cli": "^12.2.7",
     "angular-mocks": "1.8.x",
     "cpx": "^1.5.0",
+    "esbuild": "^0.13.2",
     "http-server": "^0.11.1",
     "jasmine-core": "^3.5.0",
     "karma": "^3.1.4",
     "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.3.0",
     "karma-jasmine": "^1.1.2",
-    "protractor": "^5.4.4"
+    "protractor": "^5.4.4",
+    "tslib": "^2.3.1",
+    "typescript": "^4.3.5"
   },
   "scripts": {
     "postinstall": "npm run copy-libs",
