--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "repository": "https://github.com/angular/angular-phonecat",
   "license": "MIT",
   "dependencies": {
+    "@angular/common": "^12.2.7",
     "@angular/core": "^12.2.7",
     "@angular/platform-browser": "^12.2.7",
     "@angular/upgrade": "^12.2.7",
