--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,7 +3,7 @@
     "extends": "./tsconfig.base.json",
     "compilerOptions": {
         "outDir": "./out-tsc/app",
-        "types": []
+        "types": ["angular", "angular-route"]
     },
     "files": [
         "src/app.ts"
