--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@angular/common": "^12.2.7",
     "@angular/core": "^12.2.7",
+    "@angular/forms": "^12.2.7",
     "@angular/platform-browser": "^12.2.7",
     "@angular/upgrade": "^12.2.7",
     "angular": "1.8.x",
