--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@angular/core": "^12.2.7",
     "@angular/forms": "^12.2.7",
     "@angular/platform-browser": "^12.2.7",
+    "@angular/router": "^12.2.7",
     "@angular/upgrade": "^12.2.7",
     "angular": "1.8.x",
     "angular-animate": "1.8.x",
