--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "postinstall": "npm run copy-libs && ngcc --tsconfig tsconfig.json",
     "update-deps": "npm update",
     "postupdate-deps": "npm run copy-libs",
-    "copy-libs": "cpx \"node_modules/{angular,angular-*,bootstrap/dist,jquery/dist,zone.js/bundles}/**/*\" app/lib -C",
+    "copy-libs": "cpx \"node_modules/{bootstrap/dist,zone.js/bundles}/**/*\" app/lib -C",
     "prestart": "npm install && npm run build",
     "start": "http-server ./app -a localhost -p 8000 -c-1",
     "pretest": "npm install",
